<resources>
    <string name="app_name">CD Kayaks\' Reservation</string>
    <string name="UserName">Username</string>
    <string name="SubmitButton">Submit</string>
    <string name="EmailAddressEditText">Email Address</string>
    <string name="addKayak">Add Kayak</string>
    <string name="productNameAddTextView">Product Name</string>
    <string name="productTypeSitIn">Sit in</string>
    <string name="productTypeSitOn">Sit On Top</string>
    <string name="ButtonProductSave">Save</string>
    <string name="productAddSaveButton">Save</string>
    <string name="EmployReportBugButton">Contact Us</string>
    <string name="employeeLogOffButton">Log Out</string>
    <string name="productListAllButton">View All Products</string>
    <string name="productReportAvailableButton">Available Kayaks</string>
    <string name="productReportOrderByDateButton">Order By Date</string>
    <string name="productEditName">Name</string>

    <string name="productEditCreatedBy">Created By</string>
    <string name="productDateCreated">Date Created</string>
    <string name="productEditSaveButton">Save</string>
    <string name="productEditDeleteButton">Delete</string>
    <string name="productEditCancelButton">Cancel</string>
    <string name="customerReportBugButton">Contact Us</string>
    <string name="customerReservationButton">Cart</string>
    <string name="customerLogOffButton">Log Out</string>
    <string name="customerKayakListIntroText">Kayak\'s Available for Reservation</string>
    <string name="customerListViewAll">All Available</string>
    <string name="customerReportSitOn">Sit On Top</string>
    <string name="customerReportSitInButton">Sit In</string>
    <string name="CustomerLogOffButton">Log Off</string>
    <string name="customerProductButton">View Products</string>
    <string name="customerReservationBannerText">Kayaks that have been reserved</string>
    <string name="ReportBugToEmail">admin@kayak.kayak</string>
    <string name="ReportBugToText">To:</string>
    <string name="ReportBugSubject">Subject:</string>
    <string name="ReportBugBody">Body:</string>
    <string name="ReportBugSendButton">Send</string>
    <string name="ReportBugCancel">Return</string>
    <string name="productReportReserved">Reserved</string>
    <string name="productReportReservedKayak">Reserved Kayaks</string>
    <string name="emailEditLogText">Update Email</string>
    <string name="username">userLogText</string>
    <string name="ReportBugString">Thank you for your feedback.</string>
    <string name="ReportBugSubjectString">  </string>
    <string name="kayak_name">Kayak Name</string>
    <string name="sitOnTop">1</string>
    <string name="sitInKayak">0</string>
    <string name="kName">kayakName</string>
    <string name="KayakType">KayakType</string>
    <string name="KayakReserved">KayakReserved</string>
    <string name="productReportDetailsKayak">View Details</string>
    <string name="reservedKayak">Reserved</string>
    <string name="checkedOutKayak">Checked Out</string>
    <string name="availableStatus">Available</string>
    <string name="reservedStatusRadio">Reserved</string>
    <string name="checkOutStatusRadio">Check Out</string>
    <string name="availableStatusContent">0</string>
    <string name="reservedStatusContent">1</string>
    <string name="checkedOutStatusContent">2</string>
    <string name="availableKayakList">Available</string>
    <string name="logOffModifyButton">Log Off</string>
    <string name="modifyProductTextButton">Product</string>
    <string name="modifyTextNewCustomer">Add Customer</string>
    <string name="modifyEmailEditText">Email Address</string>
    <string name="modifyUsernameText">Username</string>
    <string name="modifySaveButton">Save</string>
    <string name="modifyClearButton">Clear</string>
    <string name="usernameModifyTextAdapter">Username</string>
    <string name="emailModifyCustomerText" />
    <string name="emailAddressModifyCustomerText">Email Address</string>
    <string name="usernameDialogEdit">Username</string>
    <string name="emailDialogEditText">Email Address</string>
    <string name="titleEmployUserEditTextString">Update Customer Information</string>
    <string name="emailEmployEditTextUser">Email Address</string>
    <string name="usernameEmployUserEditTextString">Username</string>
    <string name="saveButtonTextEmployUserEdit">Save</string>
    <string name="CancelButtonEmployUserEdit">Cancel</string>
    <string name="EmployCustomerButton">Customer Data</string>
    <string name="productEditEmployTextView">Product Name</string>
    <string name="rentalStatusSitIn">Sit In</string>
    <string name="kayakCheckedOut">Checked Out</string>
    <string name="customerInformationWarningTitle">Careful, Updating Customer Data</string>


</resources>