<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/productDetailViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/kName"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/productDetailViewtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/productDetailViewName"
        android:padding="5dp"
        android:text="@string/KayakType"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/productDetailViewReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/productDetailViewtype"
        android:padding="5dp"
        android:text="@string/KayakReserved"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>


